@@ -34,6 +34,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 # Future
 
 ## New Plugins
+- `add-spatter`: allow mods to add poisons and magical effects to weapons
 
 ## Fixes
 - `autoclothing`: eliminate game lag when there are many inventory items in the fort
